fixed blog-entry class so it does not get wacky on mobile

--- a/_sass/theme/_main.scss
+++ b/_sass/theme/_main.scss
@@ -92,6 +92,7 @@ article[class^="component"] {
 .blog-entry {
   padding: 10px 20px 20px;
   border-left: solid 4px transparent;
+  display: block;
   &:hover {
     text-decoration: none;
     border-left: solid 4px;
